V 0.4.0:
  - Now uses jerrycan instead of puffotter.flask
V 0.3.2:
  - Fixed issues with light novel updates
V 0.3.1:
  - Various bugfixes
  - Added subtypes to UI
V 0.3.0:
  - Generic updates for any media type
  - Overhaul of database schema
  - Thread-aware database caching to avoid detached sqlalchemy objects and race conditions
V 0.2.0:
  - Implemented light novel release info
V 0.1.0:
  - Implemented anilist support
  - Implemented manga chapter guesses
  - Implemented manga update page
  - Implemented notifications
V 0.0.1:
  - Project start