@@ -1,4 +1,5 @@
-"""LICENSE
+
+/**
 Copyright 2020 Hermann Krumrey <hermann@krumreyh.com>
 
 This file is part of otaku-info.
@@ -15,31 +16,16 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with otaku-info.  If not, see <http://www.gnu.org/licenses/>.
-LICENSE"""
+*/
 
-from puffotter.env import load_env_file
-from jerrycan.initialize import init_flask
-from jerrycan.wsgi import start_server
-from otaku_info import sentry_dsn, root_path
-from otaku_info.background import bg_tasks
-from otaku_info.Config import Config
-from otaku_info.routes import blueprint_generators
-from otaku_info.db import models
+/**
+ Styling for the cover image
+ */
+.media-cover {
+    border-radius: 5px;
+}
 
-
-def main():
-    """
-    Starts the flask application
-    :return: None
-    """
-    load_env_file()
-    init_flask(
-        "otaku_info",
-        sentry_dsn,
-        root_path,
-        Config,
-        models,
-        blueprint_generators
-    )
-
-    start_server(Config, bg_tasks)
+.media-service-image {
+    border-radius: 10px;
+    max-height: 40px
+}
