@@ -1,4 +1,4 @@
-{#
+/**
 Copyright 2020 Hermann Krumrey <hermann@krumreyh.com>
 
 This file is part of otaku-info.
@@ -15,15 +15,29 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with otaku-info.  If not, see <http://www.gnu.org/licenses/>.
-#}
+*/
 
-<!--updates/updates.html-->
-{% extends "core/base_layout.html" %}
-{% block body %}
-    {% for weekday, entries in schedule %}
-        <h3>{{ weekday }}</h3>
-        {% for entry in entries %}
-            <p>{{ entry.media_id.media_item.title }} {{ entry.media_id.media_item.next_episode }} {{ entry.media_id.media_item.next_episode_datetime }}</p>
-        {% endfor %}
-    {% endfor %}
-{% endblock %}
+@import "colors";
+
+
+/**
+ Styling for a schedule day
+ */
+.schedule-day {
+    background: $white-color;
+    border-radius: 3px;
+    border: 2px solid $black-color;
+}
+
+
+/**
+ Styling for a schedule item
+ */
+.schedule-item {
+    img {
+        border-radius: 5px;
+        max-height: 10em;
+        min-height: 10em;
+        height: 10em;
+    }
+}
