@@ -23,3 +23,5 @@ along with otaku-info.  If not, see <http://www.gnu.org/licenses/>.
 @import "footer";
 @import "content";
 @import "updates";
+@import "schedule";
+@import "media";
