@@ -17,7 +17,7 @@ You should have received a copy of the GNU General Public License
 along with otaku-info.  If not, see <http://www.gnu.org/licenses/>.
 #}
 
-<div class="field">
+<div class="field {% if horizontal is defined and horizontal %}is-horizontal{% endif %}">
 
     {% if label_name is not none %}
         <label class="label">{{ label_name }}</label>
