@@ -36,6 +36,8 @@ along with otaku-info.  If not, see <http://www.gnu.org/licenses/>.
         {% endwith %}
     </form>
 
+    <hr>
+
     <div class="container is-fluid">
         {% for release in releases %}
             {% with release=release %}
