@@ -25,44 +25,70 @@ along with otaku-info.  If not, see <http://www.gnu.org/licenses/>.
 
 {% block body %}
     <h1>{{media_item.title}}</h1>
-    <img src="{{ media_item.cover_url }}" alt="{{ media_item.title }}">
+    <hr>
 
-    {% for media_id in media_ids %}
-        <span style="padding-right:3px; padding-top: 3px; display:inline-block;">
-            <a href="{{ media_id.service_url }}">
-                <img style="max-height: 30px" src="{{ media_id.service_icon }}" alt="{{ media_id.service.value }}"/>
-            </a>
-        </span>
-    {% endfor %}
+    <div class="columns has-text-centered">
+        <div class="column is-4">
+            <div class="columns has-text-centered">
+                <div class="column">
+                <img class="media-cover" src="{{ media_item.cover_url }}" alt="{{ media_item.title }}">
+                    </div>
+            </div>
+            <div class="columns has-text-centered">
+                <div class="column">
+                    {% for media_id in media_item.media_ids %}
+                        <span style="padding-right:3px; padding-top: 3px; display:inline-block;">
+                            <a href="{{ media_id.service_url }}">
+                                <img class="media-service-image" src="{{ media_id.service_icon }}" alt="{{ media_id.service.value }}"/>
+                            </a>
+                        </span>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+        <div class="column">
+            <h3>Info</h3>
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <td>English Title</td>
+                        <td>{{ media_item.english_title }}</td>
+                    </tr>
+                    <tr>
+                        <td>Japanese Title</td>
+                        <td>{{ media_item.romaji_title }}</td>
+                    </tr>
+                    <tr>
+                        <td>Media Type</td>
+                        <td>{{ media_item.media_type.value.title().replace("_", " ") }}</td>
+                    </tr>
+                    <tr>
+                        <td>Format</td>
+                        <td>{{ media_item.media_subtype.value.title().replace("_", " ") }}</td>
+                    </tr>
+                    <tr>
+                        <td>Releasing State</td>
+                        <td>{{ media_item.releasing_state.value.title().replace("_", " ") }}</td>
+                    </tr>
+                    <tr>
+                        <td>Latest Episode/Chapter</td>
+                        <td>{{ media_item.current_release }}</td>
+                    </tr>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <td>English Title</td>
-                <td>{{ media_item.english_title }}</td>
-            </tr>
-            <tr>
-                <td>Japanese Title</td>
-                <td>{{ media_item.romaji_title }}</td>
-            </tr>
-            <tr>
-                <td>Media Type</td>
-                <td>{{ media_item.media_type.value.title().replace("_", " ") }}</td>
-            </tr>
-            <tr>
-                <td>Format</td>
-                <td>{{ media_item.media_subtype.value.title().replace("_", " ") }}</td>
-            </tr>
-            <tr>
-                <td>Releasing State</td>
-                <td>{{ media_item.releasing_state.value.title().replace("_", " ") }}</td>
-            </tr>
-            <tr>
-                <td>Latest Episode/Chapter</td>
-                <td>{{ media_item.latest_release }}</td>
-            </tr>
-
-        </tbody>
-    </table>
-
+                </tbody>
+            </table>
+            <hr>
+            {% for user_state in media_user_states %}
+                <h3>{{ user_state.media_id.service.value.title() }}</h3>
+                    <table class="table">
+                    <tbody>
+                        <tr>
+                            <td>Progress</td>
+                            <td>{{ user_state.progress }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
