@@ -27,6 +27,6 @@ along with otaku-info.  If not, see <http://www.gnu.org/licenses/>.
 </div>
 <div class="columns has-text-centered">
     <div class="column">
-        <h3>{{ update.title }}</h3>
+        {{ update.title }}
     </div>
 </div>
